#151: Improve write methods.